# simc

./: .gitignore  CMakeLists.txt  README.md
include/: ast.h  lexer.h  pp.h  stack.h  utils.h  visitor.h
src/: CMakeLists.txt  ast.c  lexer.c  main.c  pp.c  stack.c  visitor.c
